--- a/composer.json
+++ b/composer.json
@@ -61,5 +61,11 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": {
+        "nova": {
+            "type": "path",
+            "url": "./nova"
+        }
+    }
 }
