--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,22 @@
     "require": {
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
+        "genealabs/nova-map-marker-field": "^0.3.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.4.3",
+        "inspheric/nova-url-field": "^1.4",
         "laravel/framework": "^8.65",
         "laravel/jetstream": "^2.4",
+        "laravel/nova": "*",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "tightenco/ziggy": "^1.0",
-        "laravel/nova": "*"
+        "mauricewijnia/nova-maps-address": "^1.3",
+        "simonhamp/laravel-nova-csv-import": "^0.2.0",
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
+        "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
