Improve people and sources.

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "benjacho/belongs-to-many-field": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
         "genealabs/nova-map-marker-field": "^0.3.1",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -16,7 +17,11 @@
         "laravel/nova": "*",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "martinjuul/many-to-many": "^1.0",
         "mauricewijnia/nova-maps-address": "^1.3",
+        "nikans/text-linked": "^1.0",
+        "rinvex/laravel-categories": "^6.0",
         "simonhamp/laravel-nova-csv-import": "^0.2.0",
         "tightenco/ziggy": "^1.0"
     },
