--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "prod": "npm run production",
         "production": "mix --production",
         "build-google-book-search": "cd nova-components/GoogleBookSearch && npm run dev",
-        "build-google-book-search-prod": "cd nova-components/GoogleBookSearch && npm run prod"
+        "build-google-book-search-prod": "cd nova-components/GoogleBookSearch && npm run prod",
+        "build-carousel-designer": "cd nova-components/CarouselDesigner && npm run dev",
+        "build-carousel-designer-prod": "cd nova-components/CarouselDesigner && npm run prod"
     },
     "devDependencies": {
         "@headlessui/vue": "^1.4.1",
