--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "league/flysystem-aws-s3-v3": "^1.0",
         "martinjuul/many-to-many": "^1.0",
         "mauricewijnia/nova-maps-address": "^1.3",
+        "optimistdigital/nova-sortable": "^2.4",
         "rinvex/laravel-categories": "^6.0",
         "sbine/route-viewer": "^0.0.7",
         "simonhamp/laravel-nova-csv-import": "^0.2.0",
