--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
+        "https": "^1.0.0",
+        "pdf-parse": "^1.1.1",
         "primeicons": "^4.1.0",
         "primevue": "^3.8.2"
     }
