--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
+        "maatwebsite/laravel-nova-excel": "^1.2",
         "martinjuul/many-to-many": "^1.0",
         "mauricewijnia/nova-maps-address": "^1.3",
         "optimistdigital/nova-sortable": "^2.4",
@@ -33,7 +34,8 @@
         "sbine/route-viewer": "^0.0.7",
         "simonhamp/laravel-nova-csv-import": "^0.2.0",
         "spatie/nova-backup-tool": "^4.1",
-        "tightenco/ziggy": "^1.0"
+        "tightenco/ziggy": "^1.0",
+        "ynacorp/nova-swatches": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
