--- a/package.json
+++ b/package.json
@@ -1,44 +1,52 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production",
-        "build-google-book-search": "cd nova-components/GoogleBookSearch && npm run dev",
-        "build-google-book-search-prod": "cd nova-components/GoogleBookSearch && npm run prod",
-        "build-carousel-designer": "cd nova-components/CarouselDesigner && npm run dev",
-        "build-carousel-designer-prod": "cd nova-components/CarouselDesigner && npm run prod"
-    },
-    "devDependencies": {
-        "@headlessui/vue": "^1.4.1",
-        "@heroicons/vue": "^1.0.5",
-        "@inertiajs/inertia": "^0.10.0",
-        "@inertiajs/inertia-vue3": "^0.5.1",
-        "@inertiajs/progress": "^0.2.6",
-        "@tailwindcss/forms": "^0.2.1",
-        "@tailwindcss/typography": "^0.3.0",
-        "@vue/compiler-sfc": "^3.0.5",
-        "axios": "^0.21",
-        "browser-sync": "^2.27.7",
-        "browser-sync-webpack-plugin": "^2.3.0",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "postcss-import": "^12.0.1",
-        "sass": "^1.43.4",
-        "sass-loader": "^12.3.0",
-        "tailwindcss": "^2.0.1",
-        "vue": "^3.0.5",
-        "vue-loader": "^16.1.2"
-    },
-    "dependencies": {
-        "https": "^1.0.0",
-        "pdf-parse": "^1.1.1",
-        "primeicons": "^4.1.0",
-        "primevue": "^3.8.2"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "prod": "npm run production",
+    "production": "mix --production",
+    "build-google-book-search": "cd nova-components/GoogleBookSearch && npm run dev",
+    "build-google-book-search-prod": "cd nova-components/GoogleBookSearch && npm run prod",
+    "build-carousel-designer": "cd nova-components/CarouselDesigner && npm run dev",
+    "build-carousel-designer-prod": "cd nova-components/CarouselDesigner && npm run prod",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@headlessui/vue": "^1.4.1",
+    "@heroicons/vue": "^1.0.5",
+    "@inertiajs/inertia": "^0.10.0",
+    "@inertiajs/inertia-vue3": "^0.5.1",
+    "@inertiajs/progress": "^0.2.6",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/vue3": "^6.4.9",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.3.0",
+    "@vue/compiler-sfc": "^3.0.5",
+    "axios": "^0.21",
+    "babel-loader": "^8.2.3",
+    "browser-sync": "^2.27.7",
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "laravel-mix": "^6.0.6",
+    "lodash": "^4.17.19",
+    "postcss": "^8.1.14",
+    "postcss-import": "^12.0.1",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "tailwindcss": "^2.0.1",
+    "vue": "^3.0.5",
+    "vue-loader": "^16.8.3"
+  },
+  "dependencies": {
+    "https": "^1.0.0",
+    "pdf-parse": "^1.1.1",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.8.2"
+  }
 }
