--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/vue3": "^6.4.9",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.3.0",
@@ -33,14 +34,17 @@
     "babel-loader": "^8.2.3",
     "browser-sync": "^2.27.7",
     "browser-sync-webpack-plugin": "^2.3.0",
+    "css-loader": "^6.5.1",
     "laravel-mix": "^6.0.6",
     "lodash": "^4.17.19",
     "postcss": "^8.1.14",
     "postcss-import": "^12.0.1",
-    "sass": "^1.43.4",
-    "sass-loader": "^12.3.0",
+    "sass": "^1.45.0",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "tailwindcss": "^2.0.1",
     "vue": "^3.0.5",
+    "vue-cli-plugin-storybook": "~2.1.0",
     "vue-loader": "^16.8.3"
   },
   "dependencies": {
